--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <head>
         <meta lang="en-US">
         <title>Sergio Princivalle's page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Welcome!</h1>
+        <h1 class="mainTitle">Welcome!</h1>
     </body>
 </html>
