--- a/index.html
+++ b/index.html
@@ -5,24 +5,41 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script>
-            //thanks to https://stackoverflow.com/questions/951021/what-is-the-javascript-version-of-sleep for the code below
-            const sleep = ms => new Promise(r => setTimeout(r, ms));
+        <div id="screen">
+            <div id="titleScreen">
+                <p>Sergio's website</p>
+            </div> <!-- end titleScreen -->
+            <div id="terminalSection">
+                <script>
+                    var terminal = document.getElementById("terminalSection");
+                    
+                    function printCharByChar(text)
+                    {
+                        var i = 0;
+                        terminal.innerHTML += "<p>";
+                        var timer = setInterval(function()
+                        {
+                            if(i < text.length)
+                            {
+                                terminal.innerHTML += text[i];
+                                i++;
+                            }
+                            else
+                            {
+                                clearInterval(timer);
+                            }
+                        }, 50);
+                        terminal.innerHTML += "</p>";
+                    }
 
-            async function charByChar(text)
-            {
-                for (i = 0; i < text.length; i++)
-                {
-                    document.body.innerHTML += text.charAt(i);
-                    await sleep(20);
-                }
-                document.body.innerHTML += "<br>";
-                await sleep(1000);
-            }
-            
-            charByChar("Booting up...");
-            charByChar("Found myself in: Istituto Tecnico Fossati-Da Passano, La Spezia, Italy");
-            charByChar("Website owned by: Sergio Princivalle, 5Q");
-        </script>
+                    printCharByChar("Welcome to Sergio's website!\n");
+                </script>
+            </div> <!-- end of terminalSection -->
+            <div id="footer">
+                <footer>
+                    <p>&copy; Sergio Princivalle</p>
+                </footer>
+            </div> <!-- end of footer -->
+        </div> <!-- end of screen -->
     </body>
 </html>
