Modificato il testo in italiano e aggiunta fase di boot

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             </div> <!-- end of buttons -->
             <footer>
-                <p>&copy; Sergio Princivalle</p>
+                <p>&copy; Sergio Princivalle 2022</p>
             </footer>
         </div> <!-- end of screen -->
         <!--copilot ti voglio bene-->
