aggiunte le altre pagine

--- a/thirdYear.html
+++ b/thirdYear.html
@@ -1,8 +1,27 @@
 <html>
     <head>
-        <title>No</title>
+        <meta lang="it-IT">
+        <title>Sergio Princivalle's page - Terzo anno</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>No</h1>
+        <div id="screen">
+            <div id="titleScreen">
+                Sergio's website - Terzo anno
+            </div> <!-- end titleScreen -->
+            <div id="terminalSection">
+
+            </div> <!-- end of terminalSection -->
+            <div id="buttons">
+                <button>
+                    <a href="index.php">Torna alla home</a>
+                </button>
+            </div> <!-- end of buttons -->
+            <footer>
+                <p>&copy; Sergio Princivalle 2022</p>
+            </footer>
+        </div> <!-- end of screen -->
+        <!--copilot ti voglio bene-->
     </body>
+    <script src="script.js"></script>
 </html>
