--- a/fourthYear.html
+++ b/fourthYear.html
@@ -1,16 +1,16 @@
 <html>
     <head>
         <meta lang="it-IT">
-        <title>Sergio Princivalle's page</title>
+        <title>Sergio Princivalle's page - Quarto anno</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="screen">
             <div id="titleScreen">
-                Sergio's website
+                Sergio's website - Quarto anno
             </div> <!-- end titleScreen -->
             <div id="terminalSection">
-
+                
             </div> <!-- end of terminalSection -->
             <div id="buttons">
 
@@ -21,5 +21,5 @@
         </div> <!-- end of screen -->
         <!--copilot ti voglio bene-->
     </body>
-    <script src="scriptFirstPage.js"></script>
+    <script src="script.js"></script>
 </html>
