--- a/thirdYear.html
+++ b/thirdYear.html
@@ -10,11 +10,13 @@
                 Sergio's website - Terzo anno
             </div> <!-- end titleScreen -->
             <div id="terminalSection">
+                <script>
 
+                </script>
             </div> <!-- end of terminalSection -->
             <div id="buttons">
                 <button>
-                    <a href="index.php">Torna alla home</a>
+                    <a href="index.html">Torna alla home</a>
                 </button>
             </div> <!-- end of buttons -->
             <footer>
