--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
         </div> <!-- end of screen -->
         <!--copilot ti voglio bene-->
     </body>
-    <script src="scriptFirstPage.js"></script>
+    <script src="scriptIndexPage.js"></script>
 </html>
