added scripts for all the pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta lang="it-IT">
         <title>Sergio Princivalle's page</title>
         <link rel="stylesheet" href="style.css">
+        <script src="sleep.js"></script>
     </head>
     <body>
         <div id="screen">
