--- a/thirdYear.html
+++ b/thirdYear.html
@@ -3,6 +3,7 @@
         <meta lang="it-IT">
         <title>Sergio Princivalle's page - Terzo anno</title>
         <link rel="stylesheet" href="style.css">
+        <script src="sleep.js"></script>
     </head>
     <body>
         <div id="screen">
@@ -25,5 +26,5 @@
         </div> <!-- end of screen -->
         <!--copilot ti voglio bene-->
     </body>
-    <script src="script.js"></script>
+    <script src="scriptThirdYear.js"></script>
 </html>
