--- a/fifthYear.html
+++ b/fifthYear.html
@@ -3,6 +3,7 @@
         <meta lang="it-IT">
         <title>Sergio Princivalle's page - Quinto anno</title>
         <link rel="stylesheet" href="style.css">
+        <script src="sleep.js"></script>
     </head>
     <body>
         <div id="screen">
@@ -13,7 +14,7 @@
                 
             </div> <!-- end of terminalSection -->
             <div id="buttons">
-                <a href="index.html">Torna alla home</a>
+
             </div> <!-- end of buttons -->
             <footer>
                 <p>&copy; Sergio Princivalle 2022</p>
