--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta lang="it-IT">
         <title>Sergio Princivalle's page</title>
         <link rel="stylesheet" href="style.css">
-        <script src="sleep.js"></script>
+        <script src="commonScripts.js"></script>
     </head>
     <body>
         <div id="screen">
