--- a/thirdYear.html
+++ b/thirdYear.html
@@ -3,10 +3,11 @@
         <meta lang="it-IT">
         <title>Sergio Princivalle's page - Terzo anno</title>
         <link rel="stylesheet" href="style.css">
-        <script src="sleep.js"></script>
+        <script src="commonScripts.js"></script>
     </head>
     <body>
         <div id="screen">
+            <button id="skipButton">Skip</button>
             <div id="titleScreen">
                 Sergio's website - Terzo anno
             </div> <!-- end titleScreen -->
