--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div id="screen">
+            <button id="skipButton">Skip</button>
             <div id="titleScreen">
                 Sergio's website
             </div> <!-- end titleScreen -->
