--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
             </div> <!-- end of terminalSection -->
             <div id="buttons">
-
+                <button onclick="loadThirdYear()">Terzo anno</button>
+                <button onclick="loadFourthYear()">Quarto anno</button>
+                <button onclick="loadFifthYear()">Quinto anno</button>
             </div> <!-- end of buttons -->
             <footer>
                 <p>&copy; Sergio Princivalle 2022</p>
